--- a/package.json
+++ b/package.json
@@ -9,17 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/firestore": "^3.12.1",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "algoliasearch": "^4.17.1",
     "autoprefixer": "10.4.14",
-    "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "firebase": "^9.22.1",
+    "formik": "^2.4.1",
+    "headlessui": "^0.0.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-instantsearch-hooks-web": "^6.44.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "eslint": "^8.42.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2"
   }
 }
