--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "@firebase/firestore": "^3.12.1",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
@@ -21,10 +25,12 @@
     "firebase": "^9.22.1",
     "formik": "^2.4.1",
     "headlessui": "^0.0.0",
-    "next": "13.4.4",
+    "next": "^13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-datepicker": "^4.13.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
     "react-instantsearch-hooks-web": "^6.44.2",
     "tailwindcss": "3.3.2",
