--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "firebase": "^9.22.1",
     "formik": "^2.4.1",
     "headlessui": "^0.0.0",
-    "next": "^13.4.5",
+    "nanoid": "^4.0.2",
+    "next": "^13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-datepicker": "^4.13.0",
@@ -35,7 +36,8 @@
     "react-instantsearch-hooks-web": "^6.44.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
