--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
     "react-instantsearch-hooks-web": "^6.44.2",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "yup": "^1.2.0",
