--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "algoliasearch": "^4.17.1",
     "autoprefixer": "10.4.14",
-    "eslint-config-next": "^12.0.4",
+    "eslint-config-next": "^12.3.4",
+    "eslint-config-prettier": "^8.8.0",
     "firebase": "^9.22.1",
     "formik": "^2.4.1",
     "headlessui": "^0.0.0",
@@ -43,9 +46,9 @@
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.0.2",
     "@tailwindcss/typography": "^0.5.9",
-    "eslint": "^8.42.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint": "^8.43.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.25.3"
+    "eslint-plugin-react": "^7.32.2"
   }
 }
