--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
+    "wrangler": "^3.1.1",
     "yup": "^1.2.0",
     "zod": "^3.21.4"
   },
